<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.MainActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/main_switch_on_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:scaleX="2"
        android:scaleY="2"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/main_button_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_title"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/main_title_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginRight="36dp"
        android:text="@string/main_off"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/main_switch_on_off"
        app:layout_constraintEnd_toStartOf="@+id/main_switch_on_off"
        app:layout_constraintTop_toTopOf="@+id/main_switch_on_off" />

    <TextView
        android:id="@+id/main_title_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:text="@string/main_on"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/main_switch_on_off"
        app:layout_constraintStart_toEndOf="@+id/main_title_off"
        app:layout_constraintTop_toTopOf="@+id/main_switch_on_off" />

    <ImageButton
        android:id="@+id/main_button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:contentDescription="@null"
        android:src="@drawable/ic_settings_2"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_switch_on_off" />

</android.support.constraint.ConstraintLayout>